test/files/neg/no-string-plus-1.check
no-string-plus-1.scala:9: error: value + is not a member of String
  def a(s1: String, s2: String) = s1 + s2
                                     ^
one error found
